# Custom-Model-Trainer

./: .gitignore  README.md  api.py  main.py  replicated_data.csv  requirements.txt  test.ipynb
frontend/: index.html  script.js  style.css
python_package/: pyproject.toml
python_package/src/: __init__.py  custom_training.py
python_package/src/custom_training.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: custom_training.py
